# coroactors

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  actor.h  actor_context.h  actor_detach.h  actor_result.h  actor_scheduler.h  actor_test.cpp  actor_test.sh  benchmark_actor.cpp  benchmark_actor.sh  benchmark_actor_latency.cpp  benchmark_actor_latency.sh  benchmark_blocking_queue.cpp  benchmark_blocking_queue.sh  benchmark_mailbox.cpp  benchmark_mailbox.sh  compile_examples.sh  coverage_index.sh  coverage_show.sh  detach_awaitable.h  stop_token_test.cpp  stop_token_test.sh  task_group.h  task_group_test.cpp  task_group_test.sh  timer_service.h  timer_service_test.cpp  timer_service_test.sh  with_continuation.h  with_continuation_test.cpp  with_continuation_test.sh  with_resume_callback.h
benchmarks/: CMakeLists.txt
checks/: awaiter_lifetime.cpp
checks-relacy/: check_mailbox.sh  check_relaxed_lock.cpp  check_relaxed_lock.sh  realcheck_relaxed.cpp  realcheck_relaxed.sh  with_continuation_check.cpp  with_continuation_check.sh
checks-relacy/relacy-relaxed-bug/: check_relaxed_mailbox_push.cpp  check_relaxed_mailbox_push.sh  realcheck_relaxed_mailbox_push.cpp
comparisons/: .gitignore  actor-latency-go.sh  actor-latency-swift.swift
coroactors/: actor.h  actor_context.h  actor_context_base.h  actor_error.h  actor_scheduler.h  asio_actor_scheduler.h  asio_awaitable.h  async.h  coro.h  detach_awaitable.h  intrusive_ptr.h  local.h  packaged_awaitable.h  result.h  result_error.h  stop_token.h  task.h  task_group.h  task_group_error.h  task_group_result.h  task_local.h  with_continuation.h  with_continuation_error.h  with_resume_callback.h  with_stop_token.h  with_task_group.h
coroactors/detail/: actor.h  actor_context.h  actor_context_base.h  actor_context_frame.h  actor_sleep_until.h  actor_with_deadline.h  asio_awaitable.h  async.h  async_context.h  async_task.h  atomic_semaphore.h  awaiters.h  blocking_queue.h  compiler.h  config.h  coro.h  detach_awaitable.h  intrusive_mailbox.h  intrusive_ptr.h  local.h  mailbox.h  packaged_awaitable.h  result.h  scope_guard.h  stop_token.h  stop_token_polyfill.h  symmetric_transfer.h  tag_invoke.h  task.h  task_group.h  task_local.h  with_continuation.h  with_resume_callback.h  with_task_group.h
detail/: awaiters.h  blocking_queue.h  get_awaiter.h  mailbox.h  result.h
docs/: Doxyfile
examples/: CMakeLists.txt  counter.cpp  fast_service.cpp  queue.cpp  timeout.cpp
examples/asio/: asio_echo.cpp  asio_echo.sh
examples/asio_echo/: CMakeLists.txt
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt  benchmark_actor.cpp  benchmark_actor_latency.cpp  benchmark_async.cpp  benchmark_blocking_queue.cpp  benchmark_mailbox.cpp
src/comparisons/: .gitignore  ActorLatencyJava.java  ActorLatencyJava.sh  actor-latency-go.go  actor-latency-swift.sh  actor-latency-swift.swift  async-overhead-cpp.cpp  async-overhead-cpp.sh  async-overhead-swift.sh  async-overhead-swift.swift  boost-context-overhead.cpp  boost-context-overhead.sh  coro-overhead-cpp.cpp  coro-overhead-cpp.sh  scheduler-throughput-go.go  scheduler-throughput-go.sh
src/comparisons/DotnetAsyncLatency/: Program.cs
src/comparisons/DotnetAsyncOverhead/: Program.cs
src/examples/: CMakeLists.txt  counter.cpp  fast_service.cpp  queue.cpp  timeout.cpp
src/examples/asio_echo/: CMakeLists.txt  asio_echo.cpp
src/test/: CMakeLists.txt  test_actor.cpp  test_async.cpp  test_channel.h  test_common.h  test_coro.cpp  test_intrusive_mailbox.cpp  test_local.cpp  test_mailbox.cpp  test_scheduler.h  test_stop_token.cpp  test_task.cpp  test_task_group.cpp  test_task_local.cpp  test_with_continuation.cpp  test_with_task_group.cpp
src/tools/checks/: awaiter_lifetime.cpp  awaiter_lifetime.sh
src/tools/checks-relacy/: check_mailbox.cpp  check_with_continuation.sh
src/tools/checks-relacy-bug/: check_relaxed.cpp  check_relaxed.sh  realcheck_relaxed_lock.cpp  realcheck_relaxed_lock.sh  realcheck_relaxed_mailbox_push.cpp  realcheck_relaxed_mailbox_push.sh
src/tools/comparisons/: .gitignore  actor-latency-swift.sh
test/: CMakeLists.txt  test_scheduler.h
